formato de millones en tablas

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -115,8 +115,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% for row in rubros %}                                                     
                 <tr>                                                                        
                     <td>{{ row.tipoingreso__nombre}}</td>                                    
-                    <td>{{ row.asignado|intcomma }}</td>                                    
-                    <td>{{ row.ejecutado|intcomma }}</td>                                   
+                    <td>{{ row.asignado|million|intcomma }}</td>                                    
+                    <td>{{ row.ejecutado|million|intcomma }}</td>                                   
                     {% if row.asignado %}                                                   
                         <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
                     {% endif %}                                                             
@@ -124,10 +124,10 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% endfor %}                                                                
                 <tr class="success bold">                                                   
                     <td>TOTAL</td>                                                          
-                    <td>{{ rubros|total_sum:'asignado'|intcomma }}</td>
-                    <td>{{ rubros|total_sum:'ejecutado'|intcomma }}</td>
+                    <td>{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
+                    <td>{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with sum_asignado=rubros|total_sum:'asignado' %}
-                        <td>
+                        <td class="text-right">
                             {% if sum_asignado %}
                                 {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:1|intcomma}}
                             {% endif %}
@@ -148,8 +148,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% for row in rubrosg %}                                                     
                 <tr>                                                                        
                     <td>{{ row.tipogasto__nombre}}</td>                                    
-                    <td>{{ row.asignado|intcomma }}</td>                                    
-                    <td>{{ row.ejecutado|intcomma }}</td>                                   
+                    <td>{{ row.asignado|million|intcomma }}</td>                                    
+                    <td>{{ row.ejecutado|million|intcomma }}</td>                                   
                     {% if row.asignado %}                                                   
                         <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
                     {% endif %}                                                             
@@ -157,8 +157,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% endfor %}                                                                
                 <tr class="success bold">                                                   
                     <td>TOTAL</td>                                                          
-                    <td>{{ rubrosg|total_sum:'asignado'|intcomma }}</td>
-                    <td>{{ rubrosg|total_sum:'ejecutado'|intcomma }}</td>
+                    <td>{{ rubrosg|total_sum:'asignado'|million|intcomma }}</td>
+                    <td>{{ rubrosg|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with sum_asignado=rubrosg|total_sum:'asignado' %}
                         <td>
                             {% if sum_asignado %}
@@ -181,10 +181,10 @@ Ahorro corriente de inversion  {{ municipio }}
             {% for row in rubros %}
                 <tr>
                     <td class="pull-left">{{ row.tipoingreso__nombre}}</td>
-                    <td>{{ row.asignado|intcomma }}</td>
-                    <td>{{ row.actualizado|intcomma }}</td>
-                    <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|intcomma }}{% else %}0{% endif %}</td>
-                    <td>{{ row.ejecutado|intcomma }}</td>
+                    <td>{{ row.asignado|million|intcomma }}</td>
+                    <td>{{ row.actualizado|million|intcomma }}</td>
+                    <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.actualizado %}
                         <td class="montos">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|intcomma }}%</td>
                     {% endif %}
@@ -192,18 +192,18 @@ Ahorro corriente de inversion  {{ municipio }}
             {% endfor %}
             <tr class="success bold">
                 <td>TOTAL</td>
-                <td>{{ rubros|total_sum:'asignado'|intcomma }}</td>
-                <td>{{ rubros|total_sum:'actualizado'|intcomma }}</td>
+                <td>{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
+                <td>{{ rubros|total_sum:'actualizado'|million|intcomma }}</td>
                 {% with sum_asignado=rubros|total_sum:'asignado' %}
                     <td class="montos">
                     {% if rubros|total_sum:'actualizado' %}
-                        {{ rubros|total_sum:'actualizado'|sub:sum_asignado|intcomma }}
+                        {{ rubros|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
                     {% else %}
                         0
                     {% endif %}
                 </td>
                 {% endwith %}
-                <td>{{ rubros|total_sum:'ejecutado'|intcomma }}</td>
+                <td>{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
                 {% with sum_actualizado=rubros|total_sum:'actualizado' %}
                     <td class="montos">
                         {% if sum_actualizado %}
@@ -225,10 +225,10 @@ Ahorro corriente de inversion  {{ municipio }}
             {% for row in rubrosg %}
                 <tr>
                     <td class="pull-left">{{ row.tipogasto__nombre}}</td>
-                    <td>{{ row.asignado|intcomma }}</td>
-                    <td>{{ row.actualizado|intcomma }}</td>
-                    <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|intcomma }}{% else %}0{% endif %}</td>
-                    <td>{{ row.ejecutado|intcomma }}</td>
+                    <td>{{ row.asignado|million|intcomma }}</td>
+                    <td>{{ row.actualizado|million|intcomma }}</td>
+                    <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.actualizado %}
                         <td class="montos">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|intcomma }}%</td>
                     {% endif %}
@@ -236,18 +236,18 @@ Ahorro corriente de inversion  {{ municipio }}
             {% endfor %}
             <tr class="success bold">
                 <td>TOTAL</td>
-                <td>{{ rubrosg|total_sum:'asignado'|intcomma }}</td>
-                <td>{{ rubrosg|total_sum:'actualizado'|intcomma }}</td>
+                <td>{{ rubrosg|total_sum:'asignado'|million|intcomma }}</td>
+                <td>{{ rubrosg|total_sum:'actualizado'|million|intcomma }}</td>
                 {% with sum_asignado=rubrosg|total_sum:'asignado' %}
                     <td class="montos">
                     {% if rubrosg|total_sum:'actualizado' %}
-                        {{ rubrosg|total_sum:'actualizado'|sub:sum_asignado|intcomma }}
+                        {{ rubrosg|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
                     {% else %}
                         0
                     {% endif %}
                 </td>
                 {% endwith %}
-                <td>{{ rubrosg|total_sum:'ejecutado'|intcomma }}</td>
+                <td>{{ rubrosg|total_sum:'ejecutado'|million|intcomma }}</td>
                 {% with sum_actualizado=rubrosg|total_sum:'actualizado' %}
                     <td class="montos">
                         {% if sum_actualizado %}
@@ -272,8 +272,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% for row in anuales %}
                 <tr>
                     <td>{{ row.ingreso__anio }}</td>
-                    <td>{{ row.asignado|intcomma }}</td>
-                    <td>{{ row.ejecutado|intcomma }}</td>
+                    <td>{{ row.asignado|million|intcomma }}</td>
+                    <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.asignado %}
                         <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
                     {% endif %}
@@ -281,8 +281,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% endfor %}
                 <tr class="success bold">
                     <td>TOTAL</td>
-                    <td>{{ anuales|total_sum:'asignado'|intcomma }}</td>
-                    <td>{{ anuales|total_sum:'ejecutado'|intcomma }}</td>
+                    <td>{{ anuales|total_sum:'asignado'|million|intcomma }}</td>
+                    <td>{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anuales|total_sum:'asignado' %}
                     {% if total_sum_asignado %}
                         <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
@@ -302,8 +302,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% for row in anualesg %}
                 <tr>
                     <td>{{ row.gasto__anio }}</td>
-                    <td>{{ row.asignado|intcomma }}</td>
-                    <td>{{ row.ejecutado|intcomma }}</td>
+                    <td>{{ row.asignado|million|intcomma }}</td>
+                    <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.asignado %}
                         <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
                     {% endif %}
@@ -311,8 +311,8 @@ Ahorro corriente de inversion  {{ municipio }}
                 {% endfor %}
                 <tr class="success bold">
                     <td>TOTAL</td>
-                    <td>{{ anualesg|total_sum:'asignado'|intcomma }}</td>
-                    <td>{{ anualesg|total_sum:'ejecutado'|intcomma }}</td>
+                    <td>{{ anualesg|total_sum:'asignado'|million|intcomma }}</td>
+                    <td>{{ anualesg|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anualesg|total_sum:'asignado' %}
                     {% if total_sum_asignado %}
                         <td class="montos">{{ anualesg|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
