--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-4">
-            <h2>&iquest;C&oacute;mo se financia? <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#inversion-fuentes-desc">  </button></h2>
+            <h2>&iquest;C&oacute;mo se financian las inversiones? <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#inversion-fuentes-desc">  </button></h2>
             <div id='fuentes'></div>
             <!-- GF modal -->
             <div class="modal fade" id="inversion-fuentes-desc" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
