--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -4,7 +4,7 @@
 {% load core_extras %} 
 {% block main_content %}
     <div class="col-md-12 text-centered">
-        <div class="pull-left col-md-5">
+        <div class="pull-left col-md-6">
         	{% descargar_excel "gp-all" %}
             <h2 class="title">Gastos de personal {{ municipio }} {{ year }} </h2>
         </div>
@@ -71,7 +71,7 @@
         <div class="col-md-12">
             <div class="col-md-4">
                 <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="Gasto de personal asignado" />
-                <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el porcentaje que los municipios  a nivel nacional destinaron para cubrir los gastos de administración y prestación de los">Presupuestado</h3>
+                <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el porcentaje que los municipios  a nivel nacional destinaron para cubrir los gastos de administración y prestación de los">Presupuesto inicial</h3>
                 <span class="cifra grande text-primary">{{ asignado|intcomma }}</span>
             </div>
             <div class="col-md-4">
