--- a/core/templates/ago.html
+++ b/core/templates/ago.html
@@ -38,7 +38,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
             <div class="col-md-12">
                 <div class="col-md-4">
                     <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="ingreso de funcionamiento asignado" />
-                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuestado</h3>
+                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuesto inicial</h3>
                     <span class="cifra grande text-primary">{{ asignado|intcomma }}</span>
                 </div>
                 <div class="col-md-4">
