agregando enlace para glosario

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -77,7 +77,7 @@
                   </ul>
                 </li>
                 <li><a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__municipio=1">PLANES DE INVERSIÓN</a></li>
-                <li><a href="#contact">GLOSARIO</a></li>
+                <li><a href="/glosario">GLOSARIO</a></li>
                 <li><a href="/significado/">PRESENTACIÓN</a></li>
               </ul>
             </div>
