--- a/core/templates/funcionamiento.html
+++ b/core/templates/funcionamiento.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div id="span12 search">
+    <div id="search">
     <form method="GET">
     <select name="year">
     {% for ayear in year_list %}
