--- a/website/templates/flatpages/default.html
+++ b/website/templates/flatpages/default.html
@@ -3,10 +3,10 @@
 {% load flatpages thumbnail i18n %}
 {% block content %}
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-10 pull-right-2 col-md-offset-1">
         <h3 class="text-primary">{{ flatpage.title }}</h3>
-        <div class="pull-left" style="margin-right: 20px;"><iframe width="660" height="415" src="https://www.youtube.com/embed/FLX6UdjOFts" frameborder="0" allowfullscreen></iframe></div>
-        <div class="text-left">
+        {% if flatpage.url == '/transferencias-presupuestarias/' %}<div class="pull-left" style="margin-right: 20px;"><iframe width="660" height="415" src="https://www.youtube.com/embed/FLX6UdjOFts" frameborder="0" allowfullscreen></iframe></div>{% endif %}
+        <div class="text-justify">
         {{ flatpage.content|urlize|linebreaks }}
         </div>
     </div>
