mejorando listado de organizaciones

--- a/core/templates/core/organizacion_list.html
+++ b/core/templates/core/organizacion_list.html
@@ -2,7 +2,7 @@
 {% load static thumbnail %}
 
 {% block content %}
-    <h2>Participación Ciudadana</h2>
+    <h2 class="text-primary">Participación Ciudadana</h2>
     <div class="col-md-10 col-md-offset-2">
         {% for object in object_list %}
             <div class="col-md-5 organizaciones">
