--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -58,7 +58,7 @@
                     <span class="cifra">Municipal</span>
                 </div>
               </button></a>
-              <a href="{% url 'documento_by_tipo' 'circulo-presupuestario' %}"><button class="recuadro btn btn-success">
+              <a href="/ciclo-presupuestario/"><button class="recuadro btn btn-success">
                 <span class="recuadro-icon">
                     <img src="{% static 'img/ciclob.png' %}" />
                 </span>
@@ -77,7 +77,7 @@
                     <span class="cifra">Municipal</span>
                 </div>
               </button></a>
-              <a href="{% url 'documento_by_tipo' 'participacion-ciudadana' %}"><button class="recuadro col-sm-4 col-xs-12 btn btn-info">
+              <a href="/core/organizaciones"><button class="recuadro col-sm-4 col-xs-12 btn btn-info">
                 <span class="recuadro-icon">
                     <img src="{% static 'img/participacionb.png' %}" />
                 </span>
